compiler/testData/diagnostics/tests/unsignedTypes/callDefaultConstructorOfUnsignedType.fir.kt
konst foo = <!INVISIBLE_REFERENCE!>UInt<!>()
